--- a/proj/WXRGenerator/WXRGenerator/WXRGenerator.csproj
+++ b/proj/WXRGenerator/WXRGenerator/WXRGenerator.csproj
@@ -10,6 +10,10 @@
   <ItemGroup>
     <PackageReference Include="ConsoleAppFramework" Version="4.2.4" />
     <PackageReference Include="CsvHelper" Version="30.0.1" />
+    <PackageReference Include="RelaxVersioner" Version="3.1.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
